--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ html {
   background: var(--bg-color);
   color: var(--txt-color);
 }
+body {
+  margin: 4em 0 0 0;
+}
 .dark {
   --bg-color: #3c3c3c;
   --txt-color: #fff;
@@ -34,6 +37,7 @@ header{
   width: 100%;
   background: var(--bg-color);
   top: 0;
+  height: 4em;
 }
 header a{
   font-size: 2em;
